--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
   "name": "tree-sitter-micromanager",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "Micromanager grammar for node-tree-sitter",
   "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/orelgenya/tree-sitter-micromanager.git"
+  },
   "keywords": [
     "parser",
     "lexer"
   ],
   "scripts": {
-    "build": "tree-sitter generate && electron-rebuild -v 2.0.9",
+    "install": "tree-sitter generate && node-gyp configure && node-gyp build",
+    "build": "tree-sitter generate && node-gyp build",
     "test": "tree-sitter parse ./sample.mman"
   },
   "author": "Evgenii Orel",
@@ -17,8 +22,6 @@
     "nan": "^2.11.1"
   },
   "devDependencies": {
-    "electron": "^3.0.10",
-    "electron-rebuild": "^1.8.2",
     "tree-sitter-cli": "^0.13.10"
   }
 }
